--- a/latex/references.bib
+++ b/latex/references.bib
@@ -64,3 +64,14 @@
   year={2016},
   publisher={IOP Publishing}
 }
+
+@article{zhao2021excalibur,
+  title={Excalibur: A Nonparametric, Hierarchical Wavelength Calibration Method for a Precision Spectrograph},
+  author={Zhao, Lily L and Hogg, David W and Bedell, Megan and Fischer, Debra A},
+  journal={The Astronomical Journal},
+  volume={161},
+  number={2},
+  pages={80},
+  year={2021},
+  publisher={IOP Publishing}
+}
